--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,3 +18,11 @@ div {
 #div2 {
   background-color: yellow;
 }
+
+.yellowback {
+  background-color: yellow;
+}
+
+.blueback {
+  background-color: lightblue;
+}
